Corrected the loading of mime types and display of icons in imdi sub nodes. Prevented empty keys node being displayed. Made the update of the expandable / non expandable for tree nodes more robust. Updated the way child nodes of an imdi are instantiated. When creating a sub session node node returns null, no table is shown. Adjusted the mime and hash functions to both use urls as inputs. Changed the initial information page from "introduction" to the "features/known bugs" page. Made node reloading optionally recursive. Limit tree branch resorting to only when the node text has changed. Made node reloading optionally recursive. Prevented second load process on nodes. Reduced stdout verbosity. Adding the ability to insert resources to a session. Added display of keys.